<resources>
    <string name="app_name">Amiami</string>
    <string name="error_network">Failed to download data</string>
    <string name="error_internal">Internal error occurred</string>
    <string name="settings_chrome_tabs">Chrome Custom Tabs</string>
    <string name="setting_push">Push notifications</string>
    <string name="setting_highlight_only">Show highlight items only</string>
    <string name="settings">Settings</string>
    <string name="highlight">Highlight</string>
    <string name="add">Add</string>
    <string name="highlight_hint">Add character or anime title to highlight items, that\'s name contains added string (regex supported).
        For example, \"illya\" would highlight all items with \"illya\" in it, and \"((bake)|(nise))monogatari\" would highlight all items with \"bakemonogatari\" and \"nisemonogatari\".
    </string>
    <plurals name="notification_counter">
        <item quantity="zero">%d new items in store</item>
        <item quantity="one">%d new item in store</item>
        <item quantity="two">%d new items in store</item>
        <item quantity="few">%d new items in store</item>
        <item quantity="many">%d new items in store</item>
        <item quantity="other">%d new items in store</item>
    </plurals>
    <string name="developer_email" translatable="false">cherry.perry.boy@gmail.com</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_text">You can write me about any bugs or improvements you want in the app.</string>
    <string name="error_no_email_app">Can\'t find email app, just write me cherry.perry.boy@gmail.com</string>
    <string name="filter_applied">Filter applied</string>
    <string name="minimum_price">Minimum price</string>
    <string name="maximum_price">Maximum price</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="filters">Filters</string>
    <string name="rule">New rule</string>
    <string name="back_button_alert">Press back button again for exit</string>
    <string name="yen_price_format">%d ¥</string>
    <string name="no_limit">No limit</string>
    <string name="export_settings">Export rules</string>
    <string name="import_settings">Import rules</string>
    <string name="export_error">Failed to export rules</string>
    <string name="import_error">Failed to import rules</string>

    <!-- Filter -->
    <string name="filter_reset">Reset</string>

    <!-- Highlight -->
    <string name="highlight_regexp">Regexp</string>
    <string name="highlight_type_text">Type: text</string>
    <string name="highlight_type_regex_ok">Type: regexp</string>
    <string name="highlight_type_regex_error">Type: invalid regexp</string>

    <!-- Settings -->
    <string name="settings_show_names">Show names</string>
    <string name="settings_show_names_enabled">Name will be shown in item\'s card</string>
    <string name="settings_show_names_disabled">Name will be hidden in item\'s card</string>
    <string name="settings_push_filter">Notification filter by count</string>
    <string name="settings_push_filter_description">Notifications should be hidden until selected total count of updates appears</string>

    <!-- Updates -->
    <string name="update_dialog_title">Update available</string>
    <string name="update_dialog_text">New version (%1$s - %2$s) is available on GitHub</string>
    <string name="update_dialog_download">Download</string>
    <string name="update_dialog_cancel">Cancel</string>

    <!-- Notification channel -->
    <string name="notification_channel_id">channel.updates</string>
    <string name="notification_channel_title">Updates</string>

    <!-- GitHub page -->
    <string name="github">GitHub</string>
    <string name="github_link">https://github.com/CherryPerry/Amiami-android-app</string>
    <string name="github_description">You can leave any feedback in issues page</string>

</resources>